update composer file

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,7 @@
         "psr-4": {
             "Ax\\Zoom\\": ""
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true    
 }
