--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ax/module-zoom",
     "description": "AX-ZOOM",
     "require": {
-        "php": "~5.5.0|~5.6.0|^7.0.0",
+        "php": "~5.5.0|~5.6.0|~7.2.5|^7.0.0",
         "magento/framework": "100.0.*",
         "magento/module-ui": "100.0.*",
         "magento/module-config": "100.0.*"
